--- a/plugins/kottapalli/templates/type/article/view.html
+++ b/plugins/kottapalli/templates/type/article/view.html
@@ -1,10 +1,14 @@
 $def with (article)
 
 $var title: $article.title
+
+<script type="text/javascript" src="/static/js/transliterator/helper.js"></script>
+<script type="text/javascript" src="/static/js/transliterator/tetrans.js"></script>
+<!--
 <div style="text-align:right">
     <a href="$article.issue.key">$article.issue.name</a>
 </div>
-
+-->
 $if article.intro:
     <div class = "intro">$:format(article.intro)</div>
 
@@ -13,34 +17,48 @@ $if article.intro:
 $ comments = sortComments(article.comments)
 
 <h2 id="comments">$:len(comments) వ్యాఖ్యలు 
-    <a href="#postcomment" title="మీ ఉద్దేశ్యం…">&raquo;</a>
 </h2><hr/>
 
 <ol>
 $for c in comments:
     <li>
         $c.comment
-        <p><cite>వ్యాఖ్య ద్వారా $c.author &#8212; $c.last_modified</cite> </p>
+        <p><cite>వ్రాసిన వారు: 
+        $if c.website:
+            <a href="$c.website">$c.author</a> 
+        $else:
+            $c.author     
+        &#8212; $datestr(c.last_modified)</cite> </p>
     </li>
 </ol>
 <br/>
-<h2 id="postcomment">వ్యాఖ్యానించండి...</h2><hr/>
-<form method="POST" name="edit" action="/addComment">
-<table>
+<h2 id="postcomment">
+<a onclick="\$('div#newComment').toggle(); return false;" href="#">వ్యాఖ్య రాయండి</a>
+</h2>
+<div id="newComment" style="display: none;">
+<form method="POST" name="edit" id="commentform" action="/addComment">
+<table style="width: 100%;">
  <tr>
-    <td><label for="author"><small>పేరు</small></label></p>
-</td>
+    <td><label for="author"><small>పేరు</small></label></td>
     <td><input type="text" id="input_author" name="author" value="" /></td>
  </tr>
+<tr>
+<td><label for = "website"><small>వెబ్సైటు</small></label></td>
+<td><input type="text" id="input_website" name="website" value="" /></td>
+</tr>
+<tr>
+<td><label for = "email"><small>ఈ-మెయిలు</small></label></td>
+<td><input type="text" id="input_email" name="email" value="" /></td>
+</tr>
  <tr>
     <td><label for="comment"><small>వ్యాఖ్య</small></label></p>
 </td>
-    <td><textarea name="comment" rows="13" cols="68"></textarea></td>
+    <td><textarea name="comment" id = "commentInput" rows="5" style="width: 100%;"></textarea></td>
  </tr>
 
  <tr>
-    <td><INPUT TYPE=”text” name="article.key" value=$article.key style="position:absolute;top:100px;left:5px;visibility:hidden;"></td>
+    <td><input TYPE="hidden" name="article.key" value=$article.key/></td>
  </tr>
 </table>
-<input type="submit" name='_save' value="Save" />
+<input type="submit" name='_save' value="వ్యాఖ్య పంపించు" />
 </form>
