css change: wrap long lines in pre elements

--- a/plugins/kottapalli/files/css/pastel.css
+++ b/plugins/kottapalli/files/css/pastel.css
@@ -198,3 +198,16 @@ div.category{
     text-align: right;
     width: 15em;
 }
+
+/*
+ * Wrap pre if lines are too long.  
+ * Reference: http://www.longren.org/2006/09/27/wrapping-text-inside-pre-tags/
+ */
+pre {
+ white-space: pre-wrap;       /* css-3 */
+ white-space: -moz-pre-wrap !important;  /* Mozilla, since 1999 */
+ white-space: -pre-wrap;      /* Opera 4-6 */
+ white-space: -o-pre-wrap;    /* Opera 7 */
+ word-wrap: break-word;       /* Internet Explorer 5.5+ */
+}
+
