--- a/plugins/kottapalli/files/css/pastel.css
+++ b/plugins/kottapalli/files/css/pastel.css
@@ -69,20 +69,20 @@ background-color : #d9e1e5;
    width: 150px;
 }
 
-#menu {
+.menu {
 /*width : 140px; */
 width : 140px;
 padding : 3px 0 0 0;
 }
-#menu ul {
+.menu ul {
 margin : 0;
 padding : 0;
 list-style-type : none;
 }
-#menu li {
+.menu li {
 margin : 0 0 0.5em 0;
 }
-#menu a {
+.menu a {
 display : block;
 /* font-size : 11px; */
 font-size : 10px;
@@ -94,7 +94,7 @@ width : 120px;
 padding : 0.1em 0.8em;
 text-decoration : none;
 }
-#menu a:hover {
+.menu a:hover {
 background-color : #a4a4a0;
 color : #fff;
 }
