Added transliteration code and copied all macros ans templtes ferom wiki to files.

--- a/plugins/kottapalli/templates/site.html
+++ b/plugins/kottapalli/templates/site.html
@@ -4,8 +4,8 @@ $def with (page)
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta name="verify-v1" content="kDwD0f2P1DxMRwCgqDNLtoHr8CAVjf0RwN6xPgwYv2w=" />
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+<meta name="keywords" value="కొత్తపల్లి, తెలుగు పిల్లల e-మాసపత్రిక, $page.title" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
 <title>$page.title (కొత్తపల్లి)</title>
 <script type="text/javascript" src="/static/js/jquery/jquery.js"></script>
@@ -47,6 +47,7 @@ body{behavior:url(csshover.htc); font-size:75%;}
 
     <div id="menuh">
         $:macros.headermenu()
+    </div>
     </div>
 
     <!-- End CSS Horizontal Popout Menu -->
@@ -100,3 +101,4 @@ $:page
  </div>
 </div>
  </body>
+</html>
