--- a/plugins/kottapalli/templates/type/category/view.html
+++ b/plugins/kottapalli/templates/type/category/view.html
@@ -2,5 +2,7 @@ $def with (category)
 
 $var title: $category.name
 
+<!-- $category.id -->
+
 $for article in category.articles:
     <hr/>$:thingrepr(article)
