--- a/plugins/kottapalli/templates/feed.html
+++ b/plugins/kottapalli/templates/feed.html
@@ -8,20 +8,20 @@ $def with (site)
     xmlns:media="http://search.yahoo.com/mrss"
     >
     <channel>
-     <title>కొత్తపల్లి</title>
-     <link>$site</link>
-     <description>తెలుగు పిల్లల (e)మాసపత్రిక</description>
-     <lastBuildDate>Wed, 07 May 2008 15:41:41 GMT</lastBuildDate>
-     <generator>infogami</generator>
-     <language>te</language>
-      $ issues = get_issues()
-      $if issues:
-        $for article in issues[0].articles:
-            <item>
-                <title>$article.title</title>
-                <link>$site$article.key</link>
-                <pubDate>Wed, 07 May 2008 06:09:03 +0000</pubDate>
-                <description>$macros.getIntro(article)</description>
-            </item>
+    <title>కొత్తపల్లి</title>
+    <link>$site</link>
+    <description>తెలుగు పిల్లల (e)మాసపత్రిక</description>
+    <generator>infogami</generator>
+    <language>te</language>
+    $ issues = get_issues()
+    $if issues:
+        <lastBuildDate>$feed_date_format(issues[0].last_modified)</lastBuildDate>
+            $for article in issues[0].articles:
+                <item>
+                    <title>$article.title</title>
+                    <link>$site$article.key</link>
+                    <pubDate>Wed, 07 May 2008 06:09:03 +0000</pubDate>
+                    <description>$macros.getIntro(article)</description>
+                </item>
     </channel>
 </rss>
