Added code to search with in site with google custom search

--- a/plugins/kottapalli/files/css/menu.css
+++ b/plugins/kottapalli/files/css/menu.css
@@ -84,4 +84,7 @@ div#menuh li:hover ul, div#menuh li li:hover ul, div#menuh li li li:hover ul, di
 display : block;
 }
 
+iframe { 
+    width: 100%;
+}
 /* End CSS Popout Menu */
