--- a/plugins/kottapalli/templates/type/article/view.html
+++ b/plugins/kottapalli/templates/type/article/view.html
@@ -2,13 +2,15 @@ $def with (article)
 
 $var title: $article.title
 
-<script type="text/javascript" src="/static/js/transliterator/helper.js"></script>
-<script type="text/javascript" src="/static/js/transliterator/tetrans.js"></script>
 <!--
 <div style="text-align:right">
     <a href="$article.issue.key">$article.issue.name</a>
 </div>
 -->
+
+<script type="text/javascript" src="/static/js/transliterator/trans.js"></script>
+<script type="text/javascript" src="/static/js/transliterator/tetrans.js"></script>
+
 $if article.intro:
     <div class = "intro">$:format(article.intro)</div>
 
@@ -36,7 +38,7 @@ $for c in comments:
 <a onclick="\$('div#newComment').toggle(); return false;" href="#">వ్యాఖ్య రాయండి</a>
 </h2>
 <div id="newComment" style="display: none;">
-<form method="POST" name="edit" id="commentform" action="/addComment">
+<form method="POST" name="edit" id="commentForm" action="/addComment">
 <table style="width: 100%;">
  <tr>
     <td><label for="author"><small>పేరు</small></label></td>
@@ -53,12 +55,13 @@ $for c in comments:
  <tr>
     <td><label for="comment"><small>వ్యాఖ్య</small></label></p>
 </td>
-    <td><textarea name="comment" id = "commentInput" rows="5" style="width: 100%;"></textarea></td>
+    <td><textarea name="comment" rows="5" id = "input_comment" style="width: 100%;"></textarea></td>
  </tr>
 
  <tr>
-    <td><input TYPE="hidden" name="article.key" value=$article.key/></td>
+    <td><INPUT TYPE=”text” name="article.key" value=$article.key style="position:absolute;top:100px;left:5px;visibility:hidden;"></td>
  </tr>
 </table>
 <input type="submit" name='_save' value="వ్యాఖ్య పంపించు" />
 </form>
+
