Added kottapalli chaatimpu google group. User can subscribe to this group directly from site

--- a/plugins/kottapalli/files/css/pastel.css
+++ b/plugins/kottapalli/files/css/pastel.css
@@ -108,6 +108,11 @@ color : #666;
 background-color : #d9e1e5;
 }
 
+#submit_button {
+    display:block;
+    margin:0 auto;
+}
+
 #footer {
 clear : both;
 padding : 5px;
