--- a/plugins/kottapalli/templates/show_images.html
+++ b/plugins/kottapalli/templates/show_images.html
@@ -5,18 +5,18 @@ $var title: images of $issue.name
 <div style="float: right;">issue: <a href="/dashboard${issue.key}">$issue.name</a></div><br/>
 <div id="disp_images" name="disp_images">
     $ path = 'images' + issue.key
-    $ nimgs = 7
+    $ nimgs = 5
     $ i = 0
     <table>
     <tr>
     $for i in range(len(images)):
-        $if ((i + 1) % nimgs) == 0:
+        $if ((i % nimgs) == 0) and (i != 0):
             </tr><tr>
-        $else:
-            <td><a class="small" href="/static/${path}/${images[i]}" target="_blank"><img width="50" height="50" border="0" style="border: 1px solid rgb(204, 204, 204);" alt="${images[i]}" src="/static/${path}/${images[i]}"/></a>
-            <br/>
-            <a class="small" href="/static/${path}/${images[i]}" target="_blank">${images[i]}</a></td>
-    $if ((i + 1) % nimgs) != 0:
+        <td><a class="small" href="/static/${path}/${images[i]}" target="_blank"><img width="50" height="50" border="0" style="border: 1px solid rgb(204, 204, 204);" alt="${images[i]}" src="/static/${path}/${images[i]}"/></a>
+        <br/>
+        <a class="small" href="/static/${path}/${images[i]}" target="_blank">${images[i]}</a></td>
+
+    $if i == 0 and (i % nimgs) != 0:
         </tr>
     </table>
 </div>
