--- a/plugins/kottapalli/templates/site.html
+++ b/plugins/kottapalli/templates/site.html
@@ -14,8 +14,11 @@ $def with (page)
 
 <link href="/static/css/pastel.css" rel="stylesheet" type="text/css" />
 <link href="/static/css/menu.css" rel="stylesheet" type="text/css" />
-<link rel="alternate" type="application/rss+xml" title="కొత్తపల్లి rss ఫీడు" href="/feed/rss" feed=rss"/>
-<link rel="alternate" type="application/atom+xml" title="కొత్తపల్లి atom ఫీడు" href="/feed/atom" feed=atom/>
+<link rel="alternate" type="application/rss+xml" title="కొత్తపల్లి rss ఫీడు" href="/feed?type=rss" feed=rss"/>
+<link rel="alternate" type="application/atom+xml" title="కొత్తపల్లి atom ఫీడు" href="/feed?type=atom" feed=atom/>
+<link rel="alternate" type="application/rss+xml" title="కొత్తపల్లి వ్యాఖ్యల rss ఫీడు" href="/comments/feed?type=rss" feed=rss"/>
+<link rel="alternate" type="application/atom+xml" title="కొత్తపల్లి వ్యాఖ్యల atom ఫీడు" href="/comments/feed?type=atom" feed=atom/>
+
 $for s in ctx.stylesheets:
     <link rel="stylesheet" type="text/css" href="$s">
 
@@ -79,6 +82,13 @@ body{behavior:url(csshover.htc); font-size:75%;}
         <a style="font-size: 20px" href="#" onclick="return change_font_size('20px');">అ</a>
         <a style="font-size: 22px" href="#" onclick="return change_font_size('22px');">అ</a>
     </div>
+    <div id="navigation">
+       $ nav = navigation()
+       <div style="float: left; text-align: left;">
+        $for n in nav:
+            <a href="$n[1]">$n[0]</a> >>
+       </div>
+    </div>
     <br/>
     <br/>
 
@@ -104,4 +114,3 @@ $:page
  </div>
 </div>
  </body>
-
