--- a/plugins/kottapalli/templates/viewpage.html
+++ b/plugins/kottapalli/templates/viewpage.html
@@ -14,9 +14,9 @@ $if 'rawtext' in view:
 
 $:view
 
-<div id="dateline">
-    <a href="$url(m='edit')" accesskey="e">$_.edit</a>
-    <a href="$url(m='history')" accesskey="h">$_.history</a>
-    $_.last_modified $datestr(page.last_modified)
-</div>
-
+$if ctx.user:
+    <div id="dateline">
+        <a href="$url(m='edit')" accesskey="e">$_.edit</a>
+        <a href="$url(m='history')" accesskey="h">$_.history</a>
+        $_.last_modified $datestr(page.last_modified)
+    </div>
