--- a/plugins/kottapalli/templates/sitemap.html
+++ b/plugins/kottapalli/templates/sitemap.html
@@ -1,13 +1,12 @@
-$def with (issues)
+$def with (articles)
 <?xml version="1.0" encoding="utf-8"?>
 <urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
     <url>
         <loc>http://kottapalli.in/</loc>
     </url>
-    $for issue in issues:
-        $for a in issue.articles:
-            <url>
-                <loc>http://kottapalli.in$a.key</loc>
-                <lastmod>$a.last_modified.isoformat()</lastmod>
-            </url>
+    $for a in articles:
+        <url>
+            <loc>http://kottapalli.in$a.key</loc>
+            <lastmod>$a.last_modified.isoformat()</lastmod>
+        </url>
 </urlset> 
