fix timeformat error in sitemap.

--- a/plugins/kottapalli/templates/sitemap.html
+++ b/plugins/kottapalli/templates/sitemap.html
@@ -7,6 +7,6 @@ $def with (articles)
     $for a in articles:
         <url>
             <loc>http://kottapalli.in$a.key</loc>
-            <lastmod>$a.last_modified.isoformat()</lastmod>
+            <lastmod>$a.last_modified</lastmod>
         </url>
 </urlset> 
