--- a/plugins/kottapalli/templates/site.html
+++ b/plugins/kottapalli/templates/site.html
@@ -8,6 +8,7 @@ $def with (page)
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
 <meta name="verify-v1" content="kDwD0f2P1DxMRwCgqDNLtoHr8CAVjf0RwN6xPgwYv2w=" />
+<meta name="robots" content="$ctx.get('index', 'index'),$ctx.get('follow','follow')"/>
 
 <title>$page.title (కొత్తపల్లి)</title>
 <script type="text/javascript" src="/static/js/jquery/jquery.js"></script>
